--- a/Ansible/examples/inventory/platform/hosts.ini
+++ b/Ansible/examples/inventory/platform/hosts.ini
@@ -11,5 +11,5 @@ xray-1 ansible_host=x.x.x.x
 [distribution_servers]
 distribution-1 ansible_host=x.x.x.x
 
-[missionControl_servers]
-missionControl-1 ansible_host=x.x.x.x
+[insight_servers]
+insight-1 ansible_host=x.x.x.x
