--- a/Ansible/examples/playbook-rt-xray.yml
+++ b/Ansible/examples/playbook-rt-xray.yml
@@ -8,11 +8,16 @@
 - hosts: artifactory_servers
   collections:
     - jfrog.platform
+  serial:
+    - 1
+    - 100%
   roles:
-    - artifactory
+    - role: artifactory
+      when: artifactory_enabled | bool
 
 - hosts: xray_servers
   collections:
     - jfrog.platform
   roles:
-    - xray
+    - role: xray
+      when: xray_enabled | bool
