--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
@@ -1,5 +1,13 @@
 - name: Install prerequisite packages
   become: yes
   yum:
-    name: net-tools
+    name: ['net-tools', '{{ selinux_policy_package }}']
     state: present
+
+- name: Configure SELinux context 
+  become: yes
+  sefcontext:
+    target: "{{ jfrog_home_directory }}/artifactory/app/bin(/.*)?"
+    setype: bin_t
+    state: present
+  when: ansible_selinux.status == 'enabled'
