--- a/Openshift4/operator/artifactory-ha-operator/watches.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/watches.yaml
@@ -1,5 +1,5 @@
 ---
-- version: v1alpha1
+- version: v1
   group: charts.helm.k8s.io
   kind: OpenshiftArtifactoryHa
   chart: helm-charts/openshift-artifactory-ha
