--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
@@ -1,15 +1,15 @@
-- name: Import EPEL GPG public key
-  become: yes
-  rpm_key:
-    key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ version }}
-    state: present
-  vars:
-    version: "{{ ansible_distribution_major_version }}"
+# - name: Import EPEL GPG public key
+#   become: yes
+#   rpm_key:
+#     key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ version }}
+#     state: present
+#   vars:
+#     version: "{{ ansible_distribution_major_version }}"
 
-- name: Install EPEL repository
-  become: yes
-  yum:
-    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ version }}.noarch.rpm
-    state: present
-  vars:
-    version: "{{ ansible_distribution_major_version }}"
+# - name: Install EPEL repository
+#   become: yes
+#   yum:
+#     name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ version }}.noarch.rpm
+#     state: present
+#   vars:
+#     version: "{{ ansible_distribution_major_version }}"
