--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/main.yml
@@ -1,10 +1,13 @@
+- name: Define OS-specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
+
 - name: Install prerequisite packages
   include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Install nginx after dependency installation
   become: yes
   package:
-    name: nginx
+    name: "{{ nginx_package_name }}"
     state: present
   register: install_nginx
   retries: 5
