--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -6,6 +6,9 @@
     - certificate_key
     - server_name
 
+- name: Define OS-specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
+
 - name: Install prerequisite packages
   include_tasks: "{{ ansible_os_family }}.yml"
 
