Ignore erros on FIPS status check to not error when file doesn't exist.

--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
@@ -34,6 +34,7 @@
 - name: Grab the FIPS status
   command: cat /proc/sys/crypto/fips_enabled
   register: _fips_enabled
+  ignore_errors: true
 
 - name: Store FIPS status for use
   set_fact:
