--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
@@ -31,14 +31,10 @@
   environment:
     LC_ALL: "{{ postgres_locale }}"
 
-- name: Grab the FIPS status
+- name: Check to see if FIPS is enabled
   command: cat /proc/sys/crypto/fips_enabled
   register: _fips_enabled
   ignore_errors: true
-
-- name: Store FIPS status for use
-  set_fact:
-    fips_enabled: "{{ _fips_enabled.stdout | bool }}"
 
 - name: Setup postgres configuration files
   become: yes
