[ansible] JFrog Platform 10.1.0 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -181,6 +181,7 @@
   shell: |
     restorecon -R -v "{{ jfrog_home_directory }}/artifactory/app/bin"
   when: ansible_distribution == 'RedHat'
+  changed_when: false
 
 - name: Create artifactory service
   become: yes
