--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/RedHat.yml
@@ -1,15 +1,27 @@
-- name: Import EPEL GPG public key
+- name: Import nginx signing key
   become: yes
   rpm_key:
-    key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ version }}
+    key: https://nginx.org/keys/nginx_signing.key
     state: present
-  vars:
-    version: "{{ ansible_distribution_major_version }}"
 
-- name: Install EPEL repository
+- name: Add nginx stable repo
+  become: yes
+  copy:
+    dest: /etc/yum.repos.d/nginx-stable.repo
+    owner: root
+    group: root
+    mode: '0644'
+    content: |
+        [nginx-stable]
+        name=nginx stable repo
+        baseurl=http://nginx.org/packages/centos/$releasever/$basearch/
+        gpgcheck=1
+        enabled=1
+        gpgkey=https://nginx.org/keys/nginx_signing.key
+        module_hotfixes=true
+
+- name: Update yum cache
   become: yes
   yum:
-    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ version }}.noarch.rpm
     state: present
-  vars:
-    version: "{{ ansible_distribution_major_version }}"
+    update_cache: yes
