--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: "Check required variables"
+- name: Check required variables
   fail: msg="Variable '{{ item }}' is not defined"
   when: item not in vars
   loop:
@@ -9,7 +9,7 @@
 - name: Install prerequisite packages
   include_tasks: "{{ ansible_os_family }}.yml"
 
-- name: Install nginx after dependency installation
+- name: Install nginx
   become: yes
   package:
     name: nginx
