--- a/Amazon/cloudformation-modules/JFrog__Artifactory__NewVpc__MODULE/fragments/jfrog-artifactory-ec2-master.template.yaml
+++ b/Amazon/cloudformation-modules/JFrog__Artifactory__NewVpc__MODULE/fragments/jfrog-artifactory-ec2-master.template.yaml
@@ -1,8 +1,8 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Description: 'JFrog Artifactory Quick Start Deployment (qs-1qpmmjh2f)'
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "JFrog Artifactory Quick Start Deployment (qs-1qpmmjh2f)"
 Parameters:
-  LogicalId :
-    Description : Logical Id of the MODULE
+  LogicalId:
+    Description: Logical Id of the MODULE
     Type: String
   EnableBastion:
     Description: If set to true, a bastion host will be created.
@@ -43,14 +43,16 @@ Parameters:
     Default: 10.0.32.0/19
     Type: String
   PublicSubnet1Cidr:
-    Description: CIDR block for the public (DMZ) subnet 1 located in Availability
+    Description:
+      CIDR block for the public (DMZ) subnet 1 located in Availability
       Zone 1.
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
     Default: 10.0.128.0/20
     Type: String
   PublicSubnet2Cidr:
-    Description: CIDR block for the public (DMZ) subnet 2 located in Availability
+    Description:
+      CIDR block for the public (DMZ) subnet 2 located in Availability
       Zone 2.
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
@@ -63,7 +65,8 @@ Parameters:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
     Type: String
   RemoteAccessCidr:
-    Description: Remote CIDR range that allows you to connect to the bastion instance by using SSH.
+    Description:
+      Remote CIDR range that allows you to connect to the bastion instance by using SSH.
       It is recommended that you set this value to a trusted IP range.
       For example, you may want to grant specific ranges from within your corporate network that use the SSH protocol.
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
@@ -87,7 +90,8 @@ Parameters:
     Default: 10
     Type: Number
   BastionEnableTcpForwarding:
-    Description: Choose whether to enable TCP forwarding via bootstrapping of the bastion
+    Description:
+      Choose whether to enable TCP forwarding via bootstrapping of the bastion
       instance.
     AllowedValues:
       - "true"
@@ -95,7 +99,8 @@ Parameters:
     Default: "true"
     Type: String
   BastionEnableX11Forwarding:
-    Description: Choose true to enable X11 via bootstrapping of the bastion host.
+    Description:
+      Choose true to enable X11 via bootstrapping of the bastion host.
       Setting this value to true enables X Windows over SSH.
       X11 forwarding can be useful, but it is also a security risk, so it's recommended
       that you keep the default (false) setting.
@@ -116,14 +121,15 @@ Parameters:
   NumBastionHosts:
     Description: Number of bastion instances to create.
     AllowedValues:
-      - '1'
-      - '2'
-      - '3'
-      - '4'
-    Default: '1'
+      - "1"
+      - "2"
+      - "3"
+      - "4"
+    Default: "1"
     Type: String
   VolumeSize:
-    Description: Size in gigabytes of available storage (min 10GB). The Quick Start creates an
+    Description:
+      Size in gigabytes of available storage (min 10GB). The Quick Start creates an
       Amazon Elastic Block Store (Amazon EBS) volumes of this size.
     Default: 200
     Type: Number
@@ -184,18 +190,19 @@ Parameters:
     Default: JFrog-Artifactory-Enterprise
     Type: String
   ArtifactoryVersion:
-    Description: Version of Artifactory that you want to deploy into the Quick Start.
+    Description:
+      Version of Artifactory that you want to deploy into the Quick Start.
       To select the correct version, see the release notes at
       https://www.jfrog.com/confluence/display/RTF/Release+Notes.
-    Default: 7.21.5
+    Default: 7.27.10
     Type: String
   SmLicenseName:
     Description: Secret name created in AWS Secrets Manager, which contains the Artifactory licenses.
-    Default: ''
+    Default: ""
     Type: String
   SmCertName:
     Description: Secret name created in AWS Secrets Manager, which contains the SSL certificate and certificate key.
-    Default: ''
+    Default: ""
     Type: String
   ArtifactoryServerName:
     Description: Name of your Artifactory server. Ensure that this matches your certificate.
@@ -203,19 +210,21 @@ Parameters:
   MasterKey:
     Description: Master key for the Artifactory cluster. Generate a master key by using the command '$openssl rand -hex 16'.
     AllowedPattern: ^[a-zA-Z0-9]+$
-    MinLength: '1'
-    MaxLength: '64'
+    MinLength: "1"
+    MaxLength: "64"
     ConstraintDescription: Only capital or lowercase letters and numbers, with a Max of 64 characters.
-    NoEcho: 'true'
+    NoEcho: "true"
     Type: String
   ExtraJavaOptions:
-    Description: Set Java options to pass to the JVM for Artifactory. For more information, see the Artifactory
+    Description:
+      Set Java options to pass to the JVM for Artifactory. For more information, see the Artifactory
       system requirements at https://www.jfrog.com/confluence/display/RTF/System+Requirements#SystemRequirements-RecommendedHardware.
       Do not add Xms or Xmx settings without disabling DefaultJavaMemSettings.
     Default: -Xss256k -XX:+UseG1GC
     Type: String
   DefaultJavaMemSettings:
-    Description: Choose false to overwrite the standard memory-calculation options to pass to the Artifactory JVM.
+    Description:
+      Choose false to overwrite the standard memory-calculation options to pass to the Artifactory JVM.
       If you plan to overwrite them, ensure they are added to the ExtraJavaOptions to prevent the stack provision from failing.
     ConstraintDescription: True or False
     AllowedValues:
@@ -224,12 +233,13 @@ Parameters:
     Default: "true"
     Type: String
   DatabaseName:
-    Description: Name of your database instance. The name must be unique across all instances
+    Description:
+      Name of your database instance. The name must be unique across all instances
       owned by your AWS account in the current Region. The database instance identifier is case-insensitive,
       but it's stored in lowercase (as in "mydbinstance").
     AllowedPattern: ^[a-zA-Z]([a-zA-Z0-9])+$
-    MinLength: '1'
-    MaxLength: '60'
+    MinLength: "1"
+    MaxLength: "60"
     ConstraintDescription: 1 to 60 alphanumeric characters First character must be a letter.
     Default: artdb
     Type: String
@@ -241,8 +251,8 @@ Parameters:
     Type: String
   DatabaseUser:
     Description: Login ID for the master user of your database instance.
-    MinLength: '1'
-    MaxLength: '16'
+    MinLength: "1"
+    MaxLength: "16"
     AllowedPattern: ^[a-zA-Z]([a-zA-Z0-9])+$
     ConstraintDescription: 1 to 16 alphanumeric characters. The first character must be a letter.
     Default: artifactory
@@ -250,12 +260,12 @@ Parameters:
   DatabasePassword:
     Description: Password for the Artifactory database user.
     AllowedPattern: ^[^ \\']+$
-    MinLength: '8'
-    MaxLength: '12'
+    MinLength: "8"
+    MaxLength: "12"
     ConstraintDescription: Must be at least 8 and no more than
       12 characters containing letters and (minimum 1 capital letter), numbers and
       symbols.
-    NoEcho: 'true'
+    NoEcho: "true"
     Type: String
   DatabaseInstance:
     Description: Size of the database to be deployed as part of the Quick Start.
@@ -283,7 +293,7 @@ Parameters:
   DatabasePreferredAz:
     Description: Preferred availability zone for Amazon RDS primary instance
     Type: String
-    Default: ''
+    Default: ""
   MultiAzDatabase:
     Description: Choose false to create an Amazon RDS instance in a single Availability Zone.
     ConstraintDescription: True or False
@@ -293,25 +303,29 @@ Parameters:
     Default: "true"
     Type: String
   QsS3BucketName:
-    Description: S3 bucket name for the Quick Start assets. This string can include
+    Description:
+      S3 bucket name for the Quick Start assets. This string can include
       numbers, lowercase letters, and hyphens (-). It cannot start
       or end with a hyphen (-).
     AllowedPattern: ^[0-9a-z]+([0-9a-z-]*[0-9a-z])*$
-    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
+    ConstraintDescription:
+      Quick Start bucket name can include numbers, lowercase
       letters, and hyphens (-). It cannot start or end with a hyphen (-).
     Default: aws-quickstart
     Type: String
   QsS3KeyPrefix:
-    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
+    Description:
+      S3 key prefix for the Quick Start assets. Quick Start key prefix
       can include numbers, lowercase letters, uppercase letters, hyphens (-), and
       forward slash (/).
     AllowedPattern: ^[0-9a-zA-Z-/]*$
-    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
+    ConstraintDescription:
+      Quick Start key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), and forward slash (/).
     Default: quickstart-jfrog-artifactory/
     Type: String
   QsS3BucketRegion:
-    Default: 'us-east-1'
+    Default: "us-east-1"
     Description: AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. If you use your own bucket, you must specify your own value.
     Type: String
   InstallXray:
@@ -324,7 +338,7 @@ Parameters:
     Type: String
   XrayVersion:
     Description: The version of Xray that you want to deploy into the Quick Start.
-    Default: 3.27.3
+    Default: 3.35.0
     Type: String
   XrayNumberOfInstances:
     Description: The number of Xray instances servers to complete your
@@ -344,8 +358,8 @@ Parameters:
     Type: String
   XrayDatabaseUser:
     Description: The login ID for the Xray database user.
-    MinLength: '1'
-    MaxLength: '16'
+    MinLength: "1"
+    MaxLength: "16"
     AllowedPattern: ^[a-zA-Z]([a-zA-Z0-9])+$
     ConstraintDescription: 1 to 16 alphanumeric characters. First character must be a letter.
     Default: xray
@@ -353,25 +367,26 @@ Parameters:
   XrayDatabasePassword:
     Description: The password for the Xray database user.
     AllowedPattern: ^[^ \\']+$
-    MinLength: '8'
-    MaxLength: '12'
+    MinLength: "8"
+    MaxLength: "12"
     ConstraintDescription: Must be at least 8 and no more than
       12 characters containing letters and (minimum 1 capital letter), numbers and
       symbols.
-    NoEcho: 'true'
+    NoEcho: "true"
     Type: String
 
 Resources:
   ArtifactoryVpcStack:
     Type: JFrog::Vpc::MultiAz::MODULE
-    Metadata: {
-      PublisherId: "06ff50c2e47f57b381f874871d9fac41796c9522",
-      SupportedMajorVersions: [1]
-    }
+    Metadata:
+      {
+        PublisherId: "06ff50c2e47f57b381f874871d9fac41796c9522",
+        SupportedMajorVersions: [1],
+      }
     Properties:
       AvailabilityZone1: !Ref AvailabilityZone1
       AvailabilityZone2: !Ref AvailabilityZone2
-      NumberOfAZs: '2'
+      NumberOfAZs: "2"
       PrivateSubnet1ACIDR: !Ref PrivateSubnet1Cidr
       PrivateSubnet2ACIDR: !Ref PrivateSubnet2Cidr
       PublicSubnet1CIDR: !Ref PublicSubnet1Cidr
@@ -379,12 +394,13 @@ Resources:
       VPCCIDR: !Ref VpcCidr
   ArtifactoryExistingVpcStack:
     Type: JFrog::Artifactory::ExistingVpc::MODULE
-    Metadata: {
-      PublisherId: "06ff50c2e47f57b381f874871d9fac41796c9522",
-      SupportedMajorVersions: [1]
-    }
+    Metadata:
+      {
+        PublisherId: "06ff50c2e47f57b381f874871d9fac41796c9522",
+        SupportedMajorVersions: [1],
+      }
     Properties:
-      LogicalId : !Sub ${LogicalId}ArtifactoryExistingVpcStack
+      LogicalId: !Sub ${LogicalId}ArtifactoryExistingVpcStack
       AvailabilityZone1: !Ref AvailabilityZone1
       AvailabilityZone2: !Ref AvailabilityZone2
       KeyPairName: !Ref KeyPairName
