--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -126,12 +126,7 @@
   notify: restart artifactory
 
 - name: Ensure permissions are correct
-  become: yes
-  file:
-    path: "{{ jfrog_home_directory }}"
-    group: "{{ artifactory_group }}"
-    owner: "{{ artifactory_user }}"
-    recurse: yes
+  include_tasks: shared/ensure_permissions_correct.yml
 
 - name: Restart artifactory
   meta: flush_handlers
