Updated new artifactory and xray version for openshift

--- a/Openshift4/operator/xray-operator/Dockerfile
+++ b/Openshift4/operator/xray-operator/Dockerfile
@@ -11,13 +11,13 @@ LABEL name="JFrog Xray Enterprise Operator" \
 USER root
 
 RUN microdnf install yum \
-     && yum -y update-minimal --security --sec-severity=Important --sec-severity=Critical \
-     && yum clean all \
-     && microdnf remove yum \
-     && microdnf clean all \
-     && microdnf install gnutls \
-     && microdnf install nettle  \
-     && microdnf update openssl-libs
+      && yum -y update-minimal --security --sec-severity=Important --sec-severity=Critical \
+      && yum clean all \
+      && microdnf clean all \
+      && microdnf install gnutls \
+      && microdnf install nettle  \
+      && microdnf update openssl-libs \
+      && microdnf update cyrus-sasl-lib
 
 RUN microdnf install sudo
 RUN sudo -u helm bash
