--- a/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/Chart.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/Chart.yaml
@@ -1,23 +1,25 @@
 apiVersion: v2
-appVersion: 7.27.9
+appVersion: 7.33.12
 dependencies:
   - name: artifactory-ha
-    version: 107.27.9
+    version: 107.33.12
     repository: https://charts.jfrog.io/
 description: Openshift JFrog Artifactory HA subcharting Artifactory HA to work in Openshift environment
 home: https://www.jfrog.com/artifactory/
 icon: https://raw.githubusercontent.com/jfrog/charts/master/stable/artifactory-ha/logo/artifactory-logo.png
 keywords:
-- artifactory
-- jfrog
-- devops
+  - artifactory
+  - jfrog
+  - devops
 maintainers:
-- email: vinaya@jfrog.com
-  name: Vinay Aggarwal
-- email: johnp@jfrog.com
-  name: John Peterson
+  - email: girir@jfrog.com
+    name: Giridharan Ramasamy
+  - email: vinaya@jfrog.com
+    name: Vinay Aggarwal
+  - email: johnp@jfrog.com
+    name: John Peterson
 name: openshift-artifactory-ha
 sources:
-- https://bintray.com/jfrog/product/JFrog-Artifactory-Pro/view
-- https://github.com/jfrog/charts
-version: 107.27.9
+  - https://bintray.com/jfrog/product/JFrog-Artifactory-Pro/view
+  - https://github.com/jfrog/charts
+version: 107.33.12
