--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
@@ -9,6 +9,9 @@ galaxy_info:
   license: license (Apache-2.0)
   min_ansible_version: 2.9
   platforms:
+    - name: Amazon
+      version:
+        - 2
     - name: EL
       versions:
         - 7
