Add support to use default database driver
add task to compare the provided database driver, with version defined
add check for the next two tasks, custom postgres driver, or downloading
from the web.

this will allow the play to work on machines that don't have full access
to the internet

zachary.wayer@garmin.com

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -158,10 +158,18 @@
    - artifactory_licenses | length > 0
   notify: restart artifactory
 
+- name: Check if included database driver is the correct version
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/postgresql-{{ postgres_driver_version }}.jar"
+  register: included_database_driver
+
 - name: Check if database driver exists
   become: yes
   stat:
     path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
+  when: 
+    - not included_database_driver.stat.exists
   register: database_driver
 
 - name: Download database driver
@@ -174,6 +182,7 @@
   when:
     - postgres_driver_download_url is defined
     - not database_driver.stat.exists
+    - not included_database_driver.stat.exists
   notify: restart artifactory
 
 - name: Run restore context to reload selinux
