--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
@@ -5,9 +5,4 @@
     state: present
 
 - name: Configure SELinux context
-  become: yes
-  sefcontext:
-    target: "{{ jfrog_home_directory }}/artifactory/app/bin(/.*)?"
-    setype: bin_t
-    state: present
-  when: ansible_selinux.status == 'enabled'
+  include_tasks: shared/selinux_configure_context.yml
