--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -68,7 +68,7 @@
     group: "{{ artifactory_group }}"
     creates: "{{ artifactory_untar_home }}"
     remote_src: true
-  when: download_artifactory is succeeded
+  when: (download_artifactory is succeeded) and (not ansible_check_mode)
 
 - name: Check if app directory exists
   become: yes
@@ -158,10 +158,18 @@
    - artifactory_licenses | length > 0
   notify: restart artifactory
 
+- name: Check if included database driver is the correct version
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/postgresql-{{ postgres_driver_version }}.jar"
+  register: included_database_driver
+
 - name: Check if database driver exists
   become: yes
   stat:
     path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
+  when: 
+    - not included_database_driver.stat.exists
   register: database_driver
 
 - name: Download database driver
@@ -174,14 +182,11 @@
   when:
     - postgres_driver_download_url is defined
     - not database_driver.stat.exists
+    - not included_database_driver.stat.exists
   notify: restart artifactory
 
-- name: Run restore context to reload selinux
-  become: yes
-  shell: |
-    restorecon -R -v "{{ jfrog_home_directory }}/artifactory/app/bin"
-  when: ansible_distribution == 'RedHat'
-  changed_when: false
+- name: Restore SELinux content
+  include_tasks: shared/selinux_restore_context.yml
 
 - name: Create artifactory service
   become: yes
