add more options for artifactory nginx config

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
@@ -8,3 +8,8 @@ nginx_daemon: nginx
 redirect_http_to_https_enabled: true
 
 nginx_worker_processes: 1
+
+artifactory_proxy_extra_config: |-
+  proxy_read_timeout  2400s;
+
+replicator_enabled: false
