--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/defaults/main.yml
@@ -6,3 +6,8 @@ server_name: test.artifactory.com
 nginx_daemon: nginx
 
 nginx_worker_processes: 1
+
+artifactory_proxy_extra_config: |-
+  proxy_read_timeout  2400s;
+
+replicator_enabled: false
