[ansible] Call "installService.sh" after upgrading Artifactory

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
@@ -5,6 +5,7 @@
   systemd:
     name: "{{ artifactory_daemon }}"
     state: restarted
+    daemon_reload: yes
 
 - name: stop artifactory
   become: yes
