[ansible] JFrog Platform 10.9.0 release (#242)
* Issue #136 (#230)

- added boolean variable to decide whether to add a redirect directive to the nginx config when the docker subdomain feature is used.

Co-authored-by: Ram Mohan Rao Chukka <1331672+chukka@users.noreply.github.com>

* [ansible] Call "installService.sh" after upgrading Artifactory (#238)

* Issue #207 - added compatibility with Amazon Linux 2 (#231)

Co-authored-by: Ram Mohan Rao Chukka <1331672+chukka@users.noreply.github.com>

* [ansible] JFrog Platform 10.9.0 release

Co-authored-by: Johannes Brunswicker <johannes.brunswicker@gmail.com>
Co-authored-by: Christian Bönning <hexa2k9@users.noreply.github.com>

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
@@ -22,6 +22,9 @@ galaxy_info:
       versions:
         - stretch
         - buster
+    - name: Amazon
+      version:
+        - 2
   galaxy_tags:
     - artifactory
     - jfrog
