--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/meta/main.yml
@@ -22,6 +22,9 @@ galaxy_info:
       versions:
         - stretch
         - buster
+    - name: Amazon
+      version:
+        - 2
   galaxy_tags:
     - artifactory
     - jfrog
